--- a/web/templates/PrincipalTemplate.xhtml
+++ b/web/templates/PrincipalTemplate.xhtml
@@ -59,7 +59,7 @@
 
                         <f:facet name="options">
                             <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Search"/>
-                            <p:commandButton type="button" value="Logout" icon="pi pi-home" />
+                            <p:commandButton type="button" value="Ingre" icon="pi pi-home" />
                         </f:facet>
                     </p:menubar>
                 </h:form>
