--- a/web/templates/PrincipalTemplate.xhtml
+++ b/web/templates/PrincipalTemplate.xhtml
@@ -17,25 +17,23 @@
 
         <div id="top">
             <h:form>  
-    <p:growl id="messages"/>
- 
-                    <p:menubar>
-                        <p:submenu label="File" icon="pi pi-file">
-                            <p:submenu label="New" icon="pi pi-briefcase">
-                                <p:menuitem value="Project" url="#" />
-                                <p:menuitem value="Other" url="#" />
-                            </p:submenu>
-                            <p:menuitem value="Open" url="#" />
-                            <p:separator />
-                            <p:menuitem value="Quit" url="#" />
-                        </p:submenu>
+                <p:growl id="messages"/>
 
-                        <p:submenu label="Edit" icon="pi pi-pencil">
-                            <p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
-                            <p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
-                        </p:submenu>
+                <p:menubar>
+                    <p:submenu label="Gestion" icon="pi pi-file" rendered="#{usuarioFormBean.esAdministrador}">
+                        <p:menuitem value="Usuarios" url="#" />
+                        <p:separator />
+                        <p:menuitem value="Productos" url="#" />
+                        <p:menuitem value="Ofertas" url="#" />
+                        <p:menuitem value="Roles" url="#" />
+                        <p:menuitem value="Categorias" url="#" />
+                    </p:submenu>
 
-                        <p:submenu label="Help" icon="pi pi-question">
+                    <p:menuitem value="Informes" url="#" icon="pi pi-times" rendered="#{usuarioFormBean.esAdministrador}"/>
+
+                    <p:menuitem value="Galeria" url="#" icon="pi pi-times" rendered="#{usuarioFormBean.esUsuario}"/>
+
+                        <p:submenu label="Contacto" icon="pi pi-question" rendered="#{usuarioFormBean.esUsuario}">
                             <p:menuitem value="Contents" url="#" />
                             <p:submenu label="Search" icon="pi pi-search">
                                 <p:submenu label="Text">
@@ -45,7 +43,7 @@
                             </p:submenu>
                         </p:submenu>
 
-                        <p:submenu label="Actions" icon="pi pi-cog">
+                        <p:submenu label="Servicio Tecnico" icon="pi pi-cog" rendered="#{usuarioFormBean.esUsuario}">
                             <p:submenu label="Ajax" icon="pi pi-refresh">
                                 <p:menuitem value="Save"  icon="pi pi-save" update="messages"/>
                                 <p:menuitem value="Update"  icon="pi pi-refresh" update="messages"/>
@@ -55,14 +53,11 @@
                             </p:submenu>
                         </p:submenu>
 
-                        <p:menuitem value="Quit" url="http://www.primefaces.org" icon="pi pi-times" />
-
                         <f:facet name="options">
-                            <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Search"/>
-                            <p:commandButton type="button" value="Ingre" icon="pi pi-home" />
+                            <p:outputLabel id="lblBienvenidaUsuario" value="Bienvenido #{usuarioFormBean.devolverNombreUsuario()}"/>
                         </f:facet>
-                    </p:menubar>
-                </h:form>
+                </p:menubar>
+            </h:form>
             <ui:insert name="top">Top</ui:insert>
         </div>
 
