--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -1,10 +1,10 @@
 
 #top {
     position: relative;
-    background-color: #036fab;
-    color: white;
-    padding: 5px;
-    margin: 0px 0px 10px 0px;
+    background-color: white;
+    color: black;
+    padding: 0px;
+    margin: 0px 0px 0px 0px;
 }
 
 #bottom {
@@ -14,6 +14,13 @@
     margin: 10px 0px 0px 0px;
 }
 
+ .ui-menubar
+{
+    background-color:   #75e89d;
+}
+.ui-menuitem-text{
+    color :red;
+}
 #left {
     float: left;
     background-color: #ece3a5;
@@ -30,7 +37,7 @@
 
 .center_content {
     position: relative;
-    background-color: #dddddd;
+    background-color: white;
     padding: 5px;
 }
 
