--- a/web/WEB-INF/templates/principalTemplate.xhtml
+++ b/web/WEB-INF/templates/principalTemplate.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -14,16 +15,40 @@
 
     <h:body>
 
-        <div id="top">
+        <div id="top">   
             <ui:insert name="top">
-                <h1>Muebleria Free Fire</h1>
-                <p:megaMenu orientation="#{megaMenuView.orientation}" style="margin-top:20px">
-                    <p:menuitem value="Productos" url="" icon="pi pi-times" />
-                    <p:menuitem value="Contacto" url="" icon="pi pi-times" />
-                    <p:menuitem value="Promos y Medios de Pago" url="" icon="pi pi-times" />
-                    <p:menuitem value="Envios" url="" icon="pi pi-times" />
-                    <p:menuitem value="Ventas Corporativas" url="" icon="pi pi-times" />
-                </p:megaMenu>
+                <p:panel style="background-color: greenyellow">
+                <h1 style="text-align: center">Muebleria FREE FIRE</h1>    
+                </p:panel>
+                <h:form>  
+                    <p:growl id="messages"/>
+
+                    <p:menubar>
+                        <p:submenu label="Productos">
+                            <p:menuitem value="Cocina" url="#" action="cocina" />
+                            <p:menuitem value="Colchones y Sommiers" url="#" action="colchones" />
+                            <p:menuitem value="Dormitorio" url="#" action="dormitorio"/>
+                            <p:menuitem value="Lavadero y Baño" url="#" action="lavadero"/>
+                            <p:menuitem value="Sala de Estar y Comedor" url="#" action="comedor"/>
+                        </p:submenu>
+
+                        <p:menuitem value="Informes" url="#"/>
+
+                        <p:menuitem value="Home" action="home"/>  
+
+                        <p:menuitem value="Carrito" action="carrito"/>                            
+                        
+                       
+
+                        <f:facet name="options">
+                            <p:outputLabel id="lblBienvenidaUsuario" value="Bienvenido Usuario" style="margin-right: 10px"/>
+                        </f:facet>
+                        <f:facet name="options">
+                            <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Buscar"/>
+                            <p:commandButton  value="Cerrar Sesion"/>
+                        </f:facet>
+                    </p:menubar>
+                </h:form>
             </ui:insert>
         </div>
 
@@ -31,21 +56,14 @@
             <ui:insert name="content">Content</ui:insert>
         </div>
 
-        <div id="bottom">
-            <ui:insert name="bottom">
-
-                <p:dock position="bottom">
-                    <p:menuitem value="Home" icon="/resources/demo/images/dock/home.png" url="#"/>
-                    <p:menuitem value="Music" icon="/resources/demo/images/dock/music.png" url="#"/>
-                    <p:menuitem value="Video" icon="/resources/demo/images/dock/video.png" url="#"/>
-                    <p:menuitem value="Email" icon="/resources/demo/images/dock/email.png" url="#"/>
-                    <p:menuitem value="Portfolio" icon="/resources/demo/images/dock/portfolio.png" url="#"/>
-                    <p:menuitem value="Link" icon="/resources/demo/images/dock/link.png" url="#"/>
-                    <p:menuitem value="RSS" icon="/resources/demo/images/dock/rss.png" url="#"/>
-                    <p:menuitem value="History" icon="/resources/demo/images/dock/history.png" url="#"/>
-                </p:dock>
-
-            </ui:insert>
+        <div class="ui-g-12">
+            <div id="bottom">
+                <ui:insert name="bottom">
+                    <p:panel style="background-color: #dddddd">
+                            <h5 style="text-align: center;margin-top: 30px">Grupo Free Fire</h5>
+                        </p:panel>
+                </ui:insert>
+            </div>
         </div>
 
     </h:body>
