--- a/web/resources/css/default.css
+++ b/web/resources/css/default.css
@@ -17,14 +17,14 @@ h1 {
 }
 
 a:link, a:visited {
-  color: #045491;
+  color: #75e89d;
   font-weight : bold;
   text-decoration: none;
 }
 
 a:link:hover, a:visited:hover  {
-  color: #045491;
+  color: #75e89d;
   font-weight : bold;
-  text-decoration : underline;
+  
 }
 
