--- a/web/WEB-INF/templates/principalTemplate.xhtml
+++ b/web/WEB-INF/templates/principalTemplate.xhtml
@@ -10,6 +10,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/default.css"/>
         <h:outputStylesheet name="./css/cssLayout.css"/>
+        <h:outputStylesheet name="./css/estilos.css"/>
         <title>Facelets Template</title>
     </h:head>
 
@@ -36,12 +37,12 @@
 
                         <p:menuitem value="Home" action="home"/>  
 
-                        <p:menuitem value="Carrito" action="carrito"/>                            
+                        <p:menuitem value="Carrito" action="carrito" rendered=""/>                            
                         
                        
 
                         <f:facet name="options">
-                            <p:outputLabel id="lblBienvenidaUsuario" value="Bienvenido Usuario" style="margin-right: 10px"/>
+                            <p:outputLabel id="lblBienvenidaUsuario" value="Bienvenido #{loginFormBean.nombreUsuario}" style="margin-right: 10px"/>
                         </f:facet>
                         <f:facet name="options">
                             <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Buscar"/>
