--- a/web/resources/css/estilos.css
+++ b/web/resources/css/estilos.css
@@ -17,3 +17,15 @@
      
      color: red;
  }
+ div.ui-g-12{
+     
+   background: aqua  
+ }
+ .ui-g{
+     
+     background: #ff0000;
+ }
+ #ui-g{
+     
+    background: #75e89d;
+ }
