--- a/web/WEB-INF/templates/principalTemplate.xhtml
+++ b/web/WEB-INF/templates/principalTemplate.xhtml
@@ -42,7 +42,7 @@
                        
 
                         <f:facet name="options">
-                            <p:outputLabel id="lblBienvenidaUsuario" value="Bienvenido #{loginFormBean.nombreUsuario}" style="margin-right: 10px"/>
+                            <p:outputLabel id="lblBienvenidaUsuario" value="Bienvenido #{loginFormBean.nombreUsuario} " style="margin-right: 10px"/><!---->
                         </f:facet>
                         <f:facet name="options">
                             <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Buscar"/>
